--- a/fundamentals/package.json
+++ b/fundamentals/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-fakers": "^1.0.3-rc1",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.0"
